@redundant/DescribeLanguage/Grammar/IntegrationTestingResults/v07/(07)B_comments1.md
========================================
Source Code (between the arrows)
========================================

🡆fabrics <KvtgGtnv> -> // comment here

    wool fabrics <rUEqmXfk>,
    cotton fabrics <wpra8mUV>,
    silk fabrics <VFoIEr0T>,
    synthetic fabrics <oI5DOuPh>;🡄

========================================
Parse Tree
========================================

scripture
├── expression
│   ├── item
│   │   ├── text_chunk
│   │   │   └── T(DATA|'fabrics ')
│   │   └── T(TAG|'<KvtgGtnv> ')
│   ├── producer
│   │   ├── T(HYPHEN|'-')
│   │   └── T(RIGHT_ARROW|'> ')
│   ├── item_or_expression_list
│   │   ├── item_or_expression_part
│   │   │   ├── item
│   │   │   │   ├── text_chunk
│   │   │   │   │   └── T(DATA|'wool fabrics ')
│   │   │   │   └── T(TAG|'<rUEqmXfk>')
│   │   │   └── T(SEPARATOR|',\r\n    ')
│   │   ├── item_or_expression_part
│   │   │   ├── item
│   │   │   │   ├── text_chunk
│   │   │   │   │   └── T(DATA|'cotton fabrics ')
│   │   │   │   └── T(TAG|'<wpra8mUV>')
│   │   │   └── T(SEPARATOR|',\r\n    ')
│   │   ├── item_or_expression_part
│   │   │   ├── item
│   │   │   │   ├── text_chunk
│   │   │   │   │   └── T(DATA|'silk fabrics ')
│   │   │   │   └── T(TAG|'<VFoIEr0T>')
│   │   │   └── T(SEPARATOR|',\r\n    ')
│   │   └── item
│   │       ├── text_chunk
│   │       │   └── T(DATA|'synthetic fabrics ')
│   │       └── T(TAG|'<oI5DOuPh>')
│   └── T(TERMINATOR|';')
└── T(EOF|'<EOF>')